tests/codegen/fail/interface/struct/derive_name_double_underscored.rs
use coasys_juniper::GraphQLInterface;

#[derive(GraphQLInterface)]
struct __Character {
    id: String,
}

fn main() {}
